已经放置地图

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="http://172.21.112.113:9008/LongMap/LongMap.css" />
+    <script type="text/javascript" src="http://172.21.112.113:9008/LongMap/LM.js"></script>
+    <script type="text/javascript" src="http://172.21.112.113:9008/LongMap/LongMap.js"></script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
